fix tick spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -294,7 +294,7 @@ h3 {
 }
 .answer ion-icon {
   font-size: 16px;
-  margin-right: 10px;
+  margin-right: 7px;
 }
 .answer h6 {
   color: #d20094;
